# python-sdk

./: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  setup.py  test_import.py  test_setup.py  verify_installation.py
chainup_custody_sdk/: __init__.py  enums.py  exceptions.py  logger.py  models.py
chainup_custody_sdk/mpc/: __init__.py  mpc_client.py  mpc_config.py
chainup_custody_sdk/mpc/api/: __init__.py  auto_sweep_api.py  deposit_api.py  mpc_base_api.py  notify_api.py  tron_resource_api.py  wallet_api.py  web3_api.py  withdraw_api.py  workspace_api.py
chainup_custody_sdk/utils/: __init__.py  constants.py  crypto_provider.py  http_client.py  mpc_constants.py  mpc_http_client.py  mpc_sign_util.py
chainup_custody_sdk/waas/: __init__.py  waas_client.py  waas_config.py
chainup_custody_sdk/waas/api/: __init__.py  account_api.py  async_notify_api.py  base_api.py  billing_api.py  coin_api.py  transfer_api.py  user_api.py
docs/: API_REFERENCE.md  API_REFERENCE_CN.md  README_CN.md
examples/: README.md  custom_crypto_example.py  mpc_example.py  waas_example.py
tests/: __init__.py  test_clients.py  test_config.py  test_exceptions.py  test_models.py
